Fixes video slider alignment issue

--- a/src/app/components/video-slider/video-slider.component.scss
+++ b/src/app/components/video-slider/video-slider.component.scss
@@ -12,12 +12,12 @@
 .video-card {
   min-width: 20%;
   height: calc(100% - 20px);
-  // padding-bottom: 50px;
+  width: 100%;
 }
 
 .thumbnailImage {
   align-self: center;
-  width: 320px;
+  width: 100%;
 }
 
 .wiof-slider-header {
